--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "tax_report_generation"
 version = "1.0.0"
+requires-python = ">=3.12.3"
 dependencies = [
     "pandas",
 ]
