#4 generate pdf by means of typst

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "1.0.0"
 requires-python = ">=3.12.3"
 dependencies = [
     "pandas",
-    "reportlab",
+    "typst",
 ]
 
 [tool.setuptools.packages.find]
